--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
         <li>
           <a target="_blank" href="./home.html">главная</a>
         </li>
+        <li>
+          <a target="_blank" href="./portfolio.html">Портфолио</a>
+        </li>
       </ul>
     </div>
     <style>
