--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,9 @@
 			<li>
 				<a target="_blank" href="./home.html">главная</a>
 			</li>
+			<li>
+				<a target="_blank" href="./portfolio.html">Портфолио</a>
+			</li>
 		</ul>
 	</div>
 	<style>
