--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,9 @@
 			<li>
 				<a target="_blank" href="./portfolio.html">Портфолио</a>
 			</li>
+			<li>
+				<a target="_blank" href="./services.html">услуги</a>
+			</li>
 		</ul>
 	</div>
 	<style>
