--- a/src/html/portfolio-in.htm
+++ b/src/html/portfolio-in.htm
@@ -8,7 +8,11 @@
       class="portfolio-in__filters">
       <div class="portfolio-in__group">
         <span class="portfolio-in__label txt16">Название выставки</span>
-        <select name="form[]" class="portfolio-in__select select">
+        <select
+          data-sel-scroll="292"
+          multiple
+          name="form[]"
+          class="portfolio-in__select select">
           <option value="1" selected>Экспо</option>
           <option value="2">Пункт №2</option>
           <option value="3">Пункт №3</option>
@@ -17,8 +21,15 @@
       </div>
       <div class="portfolio-in__group">
         <span class="portfolio-in__label txt16">Год</span>
-        <select name="form[]" class="portfolio-in__select select">
+        <select
+          data-sel-scroll="246"
+          multiple
+          name="form[]"
+          class="portfolio-in__select select">
           <option value="1" selected>2022</option>
+          <option value="2">Пункт №2</option>
+          <option value="3">Пункт №3</option>
+          <option value="4">Пункт №4</option>
           <option value="2">Пункт №2</option>
           <option value="3">Пункт №3</option>
           <option value="4">Пункт №4</option>
@@ -85,7 +96,19 @@
   </div>
   <div class="portfolio-in__filters filters-portfolio-in">
     <div class="filters-portfolio-in__container container">
-      <button class="filters-portfolio-in__btn">Фильтры</button>
+      <div class="filters-portfolio-in__head">
+        <button type="button" class="filters-portfolio-in__head-btn">
+          Фильтры
+        </button>
+        <button type="button" class="filters-portfolio-in__reset-btn">
+          Сбросить
+        </button>
+      </div>
+      <button
+        class="filters-portfolio-in__btn btn btn_primary_ghost btn_primary_ghost_white">
+        <span class="btn__txt">Применить</span>
+        <svg class="btn__svg"><use href="#arr-svg"></use></svg>
+      </button>
     </div>
   </div>
 </section>
