--- a/app/home.html
+++ b/app/home.html
@@ -439,7 +439,97 @@
 				<div class="reviews-modal__image-wrap modal-body">
 					<img src="img/content/35.webp" class="reviews-modal__image" alt="" />
 				</div>
-				<button class="reviews-modal__close-btn close-modal-btn">
+				<button class="modal__close-btn close-modal-btn">
+					<svg>
+						<use href="#cross-svg"></use>
+					</svg>
+				</button>
+			</div>
+		</div>
+
+		<div id="project-modal" class="project-modal modal">
+			<div class="project-modal__container container modal-content">
+				<div class="project-modal__body modal-body">
+					<div class="project-modal__slider swiper">
+						<div class="project-modal__wrapper swiper-wrapper">
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/7.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/7.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/02.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/7.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/02.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/7.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project-modal__thumbs-slider swiper">
+						<div class="project-modal__wrapper swiper-wrapper">
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/7.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/7.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/02.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/7.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/02.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+							<div class="project-modal__slide swiper-slide">
+								<div class="project-modal__image-wrap">
+									<img src="img/content/7.webp" class="project-modal__image" alt="" />
+								</div>
+							</div>
+						</div>
+					</div>
+					<button class="project-modal__nav-btn nav-btn nav-btn_prev">
+						<svg>
+							<use href="#arrow-svg"></use>
+						</svg>
+					</button>
+					<button class="project-modal__nav-btn nav-btn nav-btn_next">
+						<svg>
+							<use href="#arrow-svg"></use>
+						</svg>
+					</button>
+				</div>
+				<button class="modal__close-btn close-modal-btn">
 					<svg>
 						<use href="#cross-svg"></use>
 					</svg>
