--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,14 @@
         <li>
           <a target="_blank" href="./services.html">услуги</a>
         </li>
+        <li>
+          <a target="_blank" href="./rent.html">Аренда оборудования</a>
+        </li>
+        <li>
+          <a target="_blank" href="./portfolio-chapter.html"
+            >Детальная Портфолио</a
+          >
+        </li>
       </ul>
     </div>
     <style>
