about & contacts pages

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,12 @@
             >Детальная Портфолио</a
           >
         </li>
+        <li>
+          <a target="_blank" href="./about.html">О компании</a>
+        </li>
+        <li>
+          <a target="_blank" href="./contacts.html">контакты</a>
+        </li>
       </ul>
     </div>
     <style>
