--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,12 @@
 			<li>
 				<a target="_blank" href="./portfolio-chapter.html">Детальная Портфолио</a>
 			</li>
+			<li>
+				<a target="_blank" href="./about.html">О компании</a>
+			</li>
+			<li>
+				<a target="_blank" href="./contacts.html">контакты</a>
+			</li>
 		</ul>
 	</div>
 	<style>
