--- a/src/html/_head.htm
+++ b/src/html/_head.htm
@@ -5,6 +5,7 @@
   <!-- <style>body{opacity: 0;}</style> -->
   <link rel="stylesheet" href="css/style.css" />
   <link rel="shortcut icon" href="favicon.ico" />
+  <script src="https://api-maps.yandex.ru/v3/?apikey=402f83d9-3e90-4726-b547-87890093893a&lang=ru_RU"></script>
   <!-- <meta name="robots" content="noindex, nofollow"> -->
   <meta
     name="viewport"
