--- a/app/reviews.html
+++ b/app/reviews.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Портфолио детальная</title>
+	<title>Отзывы</title>
 	<meta charset="UTF-8" />
 	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -50,72 +50,67 @@
 		</header>
 
 		<main class="main">
-			<section class="portfolio-chapter">
-				<div class="portfolio-chapter__container container">
-					<div class="portfolio-chapter__head">
-						<div class="portfolio-chapter__badge badge">Выставочный стенд</div>
-						<div class="portfolio-chapter__content">
-							<h1 class="portfolio-chapter__title title">Черёмушки</h1>
-							<div class="portfolio-chapter__text-wrap txt20">
-								<p class="portfolio-chapter__txt">
-									Наш выставочный стенд — это сочетание креативного дизайна и
-									безупречного исполнения. Он привлекает внимание, подчеркивает
-									уникальность вашего бренда и создает комфортные условия для
-									взаимодействия с клиентами.
-								</p>
-								<p class="portfolio-chapter__txt">
-									Наш выставочный стенд — это сочетание креативного дизайна и
-									безупречного исполнения. Он привлекает внимание, подчеркивает
-									уникальность вашего бренда и создает комфортные условия для
-									взаимодействия с клиентами.
-								</p>
+			<section class="reviews-in">
+				<div class="reviews-in__container container">
+					<h1 class="reviews-in__title title">Отзывы</h1>
+					<div class="reviews-in__items">
+						<div data-modal="reviews-modal" class="reviews__item slide-reviews">
+							<div class="slide-reviews__image-wrap">
+								<img src="img/content/35.webp" class="slide-reviews__image" alt="" />
+							</div>
+							<div class="slide-reviews__text-content">
+								<span class="slide-reviews__heading txt28">Сорокин Владимир Игоревич</span>
+								<span class="slide-reviews__txt txt20">генеральный директор ООО "Неохром"</span>
 							</div>
 						</div>
-						<div class="portfolio-chapter__info">
-							<div class="portfolio-chapter__item item-portfolio-chapter txt20">
-								<span class="item-portfolio-chapter__subtitle">Название выставки</span>
-								<span class="item-portfolio-chapter__txt">Экспо</span>
+						<div data-modal="reviews-modal" class="reviews__item slide-reviews">
+							<div class="slide-reviews__image-wrap">
+								<img src="img/content/35.webp" class="slide-reviews__image" alt="" />
 							</div>
-							<div class="portfolio-chapter__item item-portfolio-chapter txt20">
-								<span class="item-portfolio-chapter__subtitle">Год</span>
-								<span class="item-portfolio-chapter__txt">2023</span>
+							<div class="slide-reviews__text-content">
+								<span class="slide-reviews__heading txt28">Сорокин Владимир Игоревич</span>
+								<span class="slide-reviews__txt txt20">генеральный директор ООО "Неохром"</span>
 							</div>
-							<div class="portfolio-chapter__item item-portfolio-chapter txt20">
-								<span class="item-portfolio-chapter__subtitle">Площадь</span>
-								<span class="item-portfolio-chapter__txt">35 м2</span>
+						</div>
+						<div data-modal="reviews-modal" class="reviews__item slide-reviews">
+							<div class="slide-reviews__image-wrap">
+								<img src="img/content/35.webp" class="slide-reviews__image" alt="" />
+							</div>
+							<div class="slide-reviews__text-content">
+								<span class="slide-reviews__heading txt28">Сорокин Владимир Игоревич</span>
+								<span class="slide-reviews__txt txt20">генеральный директор ООО "Неохром"</span>
+							</div>
+						</div>
+						<div data-modal="reviews-modal" class="reviews__item slide-reviews">
+							<div class="slide-reviews__image-wrap">
+								<img src="img/content/35.webp" class="slide-reviews__image" alt="" />
+							</div>
+							<div class="slide-reviews__text-content">
+								<span class="slide-reviews__heading txt28">Сорокин Владимир Игоревич</span>
+								<span class="slide-reviews__txt txt20">генеральный директор ООО "Неохром"</span>
+							</div>
+						</div>
+						<div data-modal="reviews-modal" class="reviews__item slide-reviews">
+							<div class="slide-reviews__image-wrap">
+								<img src="img/content/35.webp" class="slide-reviews__image" alt="" />
+							</div>
+							<div class="slide-reviews__text-content">
+								<span class="slide-reviews__heading txt28">Сорокин Владимир Игоревич</span>
+								<span class="slide-reviews__txt txt20">генеральный директор ООО "Неохром"</span>
+							</div>
+						</div>
+						<div data-modal="reviews-modal" class="reviews__item slide-reviews">
+							<div class="slide-reviews__image-wrap">
+								<img src="img/content/35.webp" class="slide-reviews__image" alt="" />
+							</div>
+							<div class="slide-reviews__text-content">
+								<span class="slide-reviews__heading txt28">Сорокин Владимир Игоревич</span>
+								<span class="slide-reviews__txt txt20">генеральный директор ООО "Неохром"</span>
 							</div>
 						</div>
 					</div>
-					<div class="portfolio-chapter__gallery">
-						<div data-modal="project-modal" data-idx="0" class="portfolio-chapter__image-wrap">
-							<img src="img/content/01.webp" class="portfolio-chapter__image" alt="" />
-						</div>
-						<div data-modal="project-modal" data-idx="1" class="portfolio-chapter__image-wrap">
-							<img src="img/content/02.webp" class="portfolio-chapter__image" alt="" />
-						</div>
-						<div data-modal="project-modal" data-idx="2" class="portfolio-chapter__image-wrap">
-							<img src="img/content/04.webp" class="portfolio-chapter__image" alt="" />
-						</div>
-						<div data-modal="project-modal" data-idx="3" class="portfolio-chapter__image-wrap">
-							<img src="img/content/05.webp" class="portfolio-chapter__image" alt="" />
-						</div>
-						<div data-modal="project-modal" data-idx="4" class="portfolio-chapter__image-wrap">
-							<img src="img/content/07.webp" class="portfolio-chapter__image" alt="" />
-						</div>
-					</div>
-					<a href="#" class="portfolio-chapter__project project-portfolio-chapter">
-						<div class="project-portfolio-chapter__image-wrap">
-							<img src="img/content/97.webp" class="project-portfolio-chapter__image" alt="" />
-						</div>
-						<div class="project-portfolio-chapter__content">
-							<span class="project-portfolio-chapter__title txt32">КМТ</span>
-							<span class="project-portfolio-chapter__txt txt20">2023</span>
-						</div>
-						<button class="project-portfolio-chapter__btn btn btn_primary">
-							<span class="btn__txt">Следующий проект</span>
-						</button>
-					</a>
 				</div>
+				<span class="reviews-in__rect rect"></span>
 			</section>
 		</main>
 		<footer class="footer">
