--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,17 @@
         <li>
           <a target="_blank" href="./contacts.html">контакты</a>
         </li>
+        <li>
+          <a target="_blank" href="./reviews.html">отзывы</a>
+        </li>
+        <li>
+          <a target="_blank" href="./not-found.html">404</a>
+        </li>
+        <li>
+          <a target="_blank" href="./policy.html"
+            >политика конфиденциальности</a
+          >
+        </li>
       </ul>
     </div>
     <style>
