--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,15 @@
 			<li>
 				<a target="_blank" href="./contacts.html">контакты</a>
 			</li>
+			<li>
+				<a target="_blank" href="./reviews.html">отзывы</a>
+			</li>
+			<li>
+				<a target="_blank" href="./not-found.html">404</a>
+			</li>
+			<li>
+				<a target="_blank" href="./policy.html">политика конфиденциальности</a>
+			</li>
 		</ul>
 	</div>
 	<style>
