--- a/src/html/portfolio-chapter.htm
+++ b/src/html/portfolio-chapter.htm
@@ -36,32 +36,47 @@
         </div>
       </div>
     </div>
-    <div data-modal="project-modal" class="portfolio-chapter__gallery">
-      <div data-idx="0" class="portfolio-chapter__image-wrap">
+    <div class="portfolio-chapter__gallery">
+      <div
+        data-modal="project-modal"
+        data-idx="0"
+        class="portfolio-chapter__image-wrap">
         <img
           src="@img/content/01.webp"
           class="portfolio-chapter__image"
           alt="" />
       </div>
-      <div data-idx="1" class="portfolio-chapter__image-wrap">
+      <div
+        data-modal="project-modal"
+        data-idx="1"
+        class="portfolio-chapter__image-wrap">
         <img
           src="@img/content/02.webp"
           class="portfolio-chapter__image"
           alt="" />
       </div>
-      <div data-idx="2" class="portfolio-chapter__image-wrap">
+      <div
+        data-modal="project-modal"
+        data-idx="2"
+        class="portfolio-chapter__image-wrap">
         <img
           src="@img/content/04.webp"
           class="portfolio-chapter__image"
           alt="" />
       </div>
-      <div data-idx="3" class="portfolio-chapter__image-wrap">
+      <div
+        data-modal="project-modal"
+        data-idx="3"
+        class="portfolio-chapter__image-wrap">
         <img
           src="@img/content/05.webp"
           class="portfolio-chapter__image"
           alt="" />
       </div>
-      <div data-idx="4" class="portfolio-chapter__image-wrap">
+      <div
+        data-modal="project-modal"
+        data-idx="4"
+        class="portfolio-chapter__image-wrap">
         <img
           src="@img/content/07.webp"
           class="portfolio-chapter__image"
