--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -25,6 +25,7 @@
   </div>
   <div class="header__menu menu-header">
     <div class="menu-header__container container"></div>
+    <span class="menu-header__rect rect"></span>
   </div>
   <a href="tel:74997071985" class="header__call"
     ><svg><use href="#tel-svg"></use></svg
