--- a/src/html/_svg.htm
+++ b/src/html/_svg.htm
@@ -48,7 +48,7 @@
   <symbol id="cross-svg" viewBox="0 0 24 24">
     <path
       d="M4 4L12 12M12 12L20 4M12 12L4 20M12 12L20 20"
-      stroke="white"
+      stroke="currentColor"
       stroke-width="2" />
   </symbol>
 
