--- a/src/html/rent-hero.htm
+++ b/src/html/rent-hero.htm
@@ -15,4 +15,5 @@
       <img src="@img/content/18.webp" class="rent-hero__image" alt="" />
     </div>
   </div>
+  <span class="rent-hero__rect rect"></span>
 </section>
