--- a/src/html/request.htm
+++ b/src/html/request.htm
@@ -41,6 +41,7 @@
         данных
       </p>
       <button
+        data-modal="request-modal"
         class="request__btn btn btn_primary btn_primary_ghost btn_primary_ghost_white">
         <span class="btn__txt">Отправить</span>
       </button>
