--- a/src/html/hero.htm
+++ b/src/html/hero.htm
@@ -1,4 +1,4 @@
-<section class="hero">
+<section data-modal="request-sent-modal" class="hero">
   <div class="hero__container container">
     <h1 class="hero__title title">Создаём эксклюзивные выставочные стенды</h1>
     <a href="#" class="hero__btn btn btn_primary">
