--- a/app/portfolio-chapter.html
+++ b/app/portfolio-chapter.html
@@ -307,7 +307,7 @@
 			<div class="request-modal__container container modal-content">
 				<div class="request-modal__body modal-body">
 					<div class="request-modal__logo-wrap">
-						<img src="img/logo-red-b.svg" class="request-modal__logo" alt="" />
+						<img src="img/logo-red-b.webp" class="request-modal__logo" alt="" />
 					</div>
 					<form action="#" class="request-modal__form">
 						<span class="request-modal__title title">Оставьте заявку</span>
