--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -58,8 +58,8 @@
 					<div data-da=".filters-portfolio-in__container,768,last" data-select-single class="portfolio-in__filters">
 						<div class="portfolio-in__group">
 							<span class="portfolio-in__label txt16">Название выставки</span>
-							<select data-sel-scroll="292" multiple name="form[]" class="portfolio-in__select select">
-								<option value="1" selected>Экспо</option>
+							<select data-placeholder="Название выставки" data-sel-scroll="292" multiple name="form[]" class="portfolio-in__select select">
+								<option value="1">Экспо</option>
 								<option value="2">Пункт №2</option>
 								<option value="3">Пункт №3</option>
 								<option value="4">Пункт №4</option>
@@ -67,8 +67,8 @@
 						</div>
 						<div class="portfolio-in__group">
 							<span class="portfolio-in__label txt16">Год</span>
-							<select data-sel-scroll="246" multiple name="form[]" class="portfolio-in__select select">
-								<option value="1" selected>2022</option>
+							<select data-placeholder="Год" data-sel-scroll="246" multiple name="form[]" class="portfolio-in__select select">
+								<option value="1">2022</option>
 								<option value="2">Пункт №2</option>
 								<option value="3">Пункт №3</option>
 								<option value="4">Пункт №4</option>
@@ -328,7 +328,7 @@
 			<div class="request-modal__container container modal-content">
 				<div class="request-modal__body modal-body">
 					<div class="request-modal__logo-wrap">
-						<img src="img/logo-red-b.svg" class="request-modal__logo" alt="" />
+						<img src="img/logo-red-b.webp" class="request-modal__logo" alt="" />
 					</div>
 					<form action="#" class="request-modal__form">
 						<span class="request-modal__title title">Оставьте заявку</span>
