--- a/src/html/clients.htm
+++ b/src/html/clients.htm
@@ -44,6 +44,14 @@
                 alt="" />
             </a>
           </div>
+          <div class="clients__slide slide-clients swiper-slide">
+            <a href="#" class="slide-clients__image-wrap">
+              <img
+                src="@img/logos/rajton.svg"
+                class="slide-clients__image"
+                alt="" />
+            </a>
+          </div>
         </div>
       </div>
     </div>
