--- a/src/html/portfolio-in.htm
+++ b/src/html/portfolio-in.htm
@@ -9,11 +9,12 @@
       <div class="portfolio-in__group">
         <span class="portfolio-in__label txt16">Название выставки</span>
         <select
+          data-placeholder="Название выставки"
           data-sel-scroll="292"
           multiple
           name="form[]"
           class="portfolio-in__select select">
-          <option value="1" selected>Экспо</option>
+          <option value="1">Экспо</option>
           <option value="2">Пункт №2</option>
           <option value="3">Пункт №3</option>
           <option value="4">Пункт №4</option>
@@ -22,11 +23,12 @@
       <div class="portfolio-in__group">
         <span class="portfolio-in__label txt16">Год</span>
         <select
+          data-placeholder="Год"
           data-sel-scroll="246"
           multiple
           name="form[]"
           class="portfolio-in__select select">
-          <option value="1" selected>2022</option>
+          <option value="1">2022</option>
           <option value="2">Пункт №2</option>
           <option value="3">Пункт №3</option>
           <option value="4">Пункт №4</option>
