--- a/app/contacts.html
+++ b/app/contacts.html
@@ -119,10 +119,7 @@
 								<textarea name="form[]" placeholder="Комментарий" class="field__input"></textarea>
 							</div>
 						</div>
-						<div class="request__checkbox checkbox">
-							<input type="checkbox" name="form[]" class="checkbox__input" />
-							<span class="checkbox__txt txt20">Я согласен на обработку персональных данных</span>
-						</div>
+
 						<p class="request__text">
 							Нажимая на кнопку “Отправить” Вы соглашаетесь на обработку персональных
 							данных
@@ -322,7 +319,7 @@
 			<div class="request-modal__container container modal-content">
 				<div class="request-modal__body modal-body">
 					<div class="request-modal__logo-wrap">
-						<img src="img/logo-red-b.svg" class="request-modal__logo" alt="" />
+						<img src="img/logo-red-b.webp" class="request-modal__logo" alt="" />
 					</div>
 					<form action="#" class="request-modal__form">
 						<span class="request-modal__title title">Оставьте заявку</span>
