--- a/app/home.html
+++ b/app/home.html
@@ -198,6 +198,11 @@
 										<img src="img/logos/solina.svg" class="slide-clients__image" alt="" />
 									</a>
 								</div>
+								<div class="clients__slide slide-clients swiper-slide">
+									<a href="#" class="slide-clients__image-wrap">
+										<img src="img/logos/rajton.svg" class="slide-clients__image" alt="" />
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -341,10 +346,7 @@
 								<textarea name="form[]" placeholder="Комментарий" class="field__input"></textarea>
 							</div>
 						</div>
-						<div class="request__checkbox checkbox">
-							<input type="checkbox" name="form[]" class="checkbox__input" />
-							<span class="checkbox__txt txt20">Я согласен на обработку персональных данных</span>
-						</div>
+
 						<p class="request__text">
 							Нажимая на кнопку “Отправить” Вы соглашаетесь на обработку персональных
 							данных
@@ -544,7 +546,7 @@
 			<div class="request-modal__container container modal-content">
 				<div class="request-modal__body modal-body">
 					<div class="request-modal__logo-wrap">
-						<img src="img/logo-red-b.svg" class="request-modal__logo" alt="" />
+						<img src="img/logo-red-b.webp" class="request-modal__logo" alt="" />
 					</div>
 					<form action="#" class="request-modal__form">
 						<span class="request-modal__title title">Оставьте заявку</span>
