--- a/src/rent.html
+++ b/src/rent.html
@@ -6,7 +6,7 @@
       @@include('html/_header.htm',{})
       <main class="main">
         @@include('html/rent-hero.htm',{}) @@include('html/photozones.htm',{})
-        @@include('html/entertaiment.htm',{})
+        @@include('html/entertaiment.htm',{}) @@include('html/catalog.htm',{})
       </main>
       @@include('html/_footer.htm',{}) @@include('html/_modals.htm',{})
     </div>
